Fix Fake Damage
Took 26 minutes