@@ -10,11 +10,15 @@ import ch.njol.skript.lang.Expression;
 import ch.njol.skript.lang.SkriptParser.ParseResult;
 import ch.njol.util.Kleenean;
 import com.ankoki.skjade.SkJade;
+import com.ankoki.skjade.utils.MinecraftVersion;
 import com.ankoki.skjade.utils.ReflectionUtils;
+import net.minecraft.world.entity.Entity;
 import org.bukkit.Bukkit;
 import org.bukkit.entity.Player;
 import org.bukkit.event.Event;
 import org.eclipse.jdt.annotation.Nullable;
+
+import java.lang.reflect.Constructor;
 
 @Name("Fake Damage")
 @Description("Makes a player look like they took damage.")
@@ -44,19 +48,24 @@ public class EffFakeDamage extends Effect {
 
     @Override
     protected void execute(Event event) {
-        Player[] viewers;
+        Player[] viewers = Bukkit.getOnlinePlayers().toArray(new Player[0]);
         if (viewerExpr != null) viewers = viewerExpr.getArray(event);
-        else viewers = Bukkit.getOnlinePlayers().toArray(new Player[0]);
         Player[] damaged = damagedExpr.getArray(event);
-        for (Player p : damaged) {
+        for (Player player : damaged) {
+            if (player == null)
+                continue;
             try {
-                Object instance = packet.getConstructor()
-                        .newInstance();
-                ReflectionUtils.setField(instance, "a", p.getEntityId());
-                ReflectionUtils.setField(instance, "b", 1);
-                for (Player v : viewers) {
-                    ReflectionUtils.sendPacket(v, instance);
+                Object instance;
+                if (MinecraftVersion.v1_18_R2.isOlder()) {
+                    Object handle = ReflectionUtils.getHandle(player);
+                    instance = packet.getConstructor(handle.getClass().getSuperclass().getSuperclass().getSuperclass(), int.class).newInstance(handle, 1);
+                } else {
+                    instance = packet.getConstructor().newInstance();
+                    ReflectionUtils.setField(instance, "a", player.getEntityId());
+                    ReflectionUtils.setField(instance, "b", 1);
                 }
+                for (Player viewer : viewers)
+                    ReflectionUtils.sendPacket(viewer, instance);
             } catch (ReflectiveOperationException ex) {
                 ex.printStackTrace();
             }
